footer bug on iphone chrome

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -3,6 +3,14 @@
   box-sizing: border-box;
 }
 
+html,body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
 body,
 html {
   /* font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif; */
@@ -13,6 +21,10 @@ html {
   color: rgb(34, 32, 32);
   overflow-x: hidden;
   background: rgb(226, 227, 230);
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
   /* height: 100%; */
 }
 h1 {
